<package format="3">
  <name>chassis</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for rmuc</p>
    <p>This package contains configuration data, 3D models and launch files
for rmuc robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>